--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="tel:+79036666666">+7 903 666-66-66</a>
             <button>Заказать звонок</button>
         </div>
+        <div> href="tel2:=+79038888888"</div>
     </header>
 </body>
 </html>
